docs: expand README usage guide